Fixes width issues on mobile with longer URLs.

--- a/_sass/_post.sass
+++ b/_sass/_post.sass
@@ -36,6 +36,7 @@ article
     background-color: $medium
     color: $white
     border-radius: $corner-radius
+    word-wrap: break-word
 
 .comments
   padding: 0 1rem
